--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=orionstoretest@gmail.com
-spring.mail.password=azjnesicjwttrcig
+spring.mail.password=:)
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
