--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ server.error.whitelabel.enabled=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=orionstoretest@gmail.com
-spring.mail.password=:)
+spring.mail.password=lhbqaxumihonuqsb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
