--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,16 @@
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
-   </dependencies>
+        <!-- https://mvnrepository.com/artifact/com.itextpdf/itext7-core -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>7.0.2</version>
+            <type>pom</type>
+        </dependency>
+
+
+    </dependencies>
 
    <build>
        <plugins>
